@@ -263,7 +263,7 @@ fi
 #        INPUT          #
 #-----------------------#
 
-if [ "$font_only" != yes ]; then
+if [ "$font_only" != yes -a "$XKBMODEL" != unknown ]; then
     # On Mac PPC machines, we may need to set kernel vars first.  We need
     # to mount /proc to do that, but we need it set up before sulogin may
     # be run in checkroot, which will need the keyboard to log in...
