@@ -40,6 +40,8 @@ console-setup (1.37) UNRELEASED; urgency=low
     Thanks to Frans Pop.
   * Allow Debconf to save charmap != UTF-8 in the configuration file even
     when console-setup-udeb or console-setup-mini is used.
+  * Remove the model question from console-setup-udeb and console-setup-mini.
+    By default do not change the keyboard when the model is unknown.
   * Delete .cvsignore and .svn in all udebs.
   * Remove the dependency on console-setup-fonts-udeb in console-setup-udeb.
 
